--- a/s14/s14con.Test/s14con.Test.csproj
+++ b/s14/s14con.Test/s14con.Test.csproj
@@ -16,4 +16,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\s14con\s14con.csproj" />
+  </ItemGroup>
+
 </Project>
